Added support for generic sync and single types that can be used as formal argument types.  The instantiated formal type is always a sync or single type and the actual is passed by reference (thus the status is not changed).  Updated the spec.
Added a test case of generic syncs for every numeric type.  This
currently fails because of conditional expressions in the runtime that
are void in one branch.  Categorized this future with the one that
Brad checked in so that they list together.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12597 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Parallelism_and_Synchronization.tex
+++ b/spec/Parallelism_and_Synchronization.tex
@@ -472,6 +472,21 @@ to the variable and not to accesses of individual fields.  A record or
 class type may have synchronization variable fields to get
 synchronization semantics on individual field accesses.
 
+\subsubsection{Synchronization Formal Arguments}
+\label{Synchronization_Formal_Arguments}
+\index{synchronization variables|formal arguments}
+
+If an argument is a sync or single type, the actual is passed by
+reference and the argument itself is a valid lvalue.
+
+The unqualified types \chpl{sync} and \chpl{single} can also be used
+to specify a generic formal argument.  In this case, the actual must
+be a synchronization variable and it is passed by reference.  For
+generic formal arguments of any type, an actual that is \chpl{sync}
+or \chpl{single} is ``read'' before being passed to the function and
+the generic formal argument is not a \chpl{sync} or \chpl{single}
+type.
+
 \subsection{Memory Consistency Model}
 \label{Memory_Consistency}
 \index{memory consistency model}
