Fixed oops on spec index entry.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12598 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Parallelism_and_Synchronization.tex
+++ b/spec/Parallelism_and_Synchronization.tex
@@ -474,7 +474,7 @@ synchronization semantics on individual field accesses.
 
 \subsubsection{Synchronization Formal Arguments}
 \label{Synchronization_Formal_Arguments}
-\index{synchronization variables|formal arguments}
+\index{synchronization variables!formal arguments}
 
 If an argument is a sync or single type, the actual is passed by
 reference and the argument itself is a valid lvalue.
