Adding Franz' latest version of FFT.  He's still seeing a big performance gap between Chapel and C99.  I'm still not.  The README in the v2/ directory lists his latest notes and my latest list of possible explanations for performance differences.  The *.pdf files in that directory show the performance that we're each seeing (up is better).
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12606 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/users/franzf/v1/README
+++ b/test/users/franzf/v1/README
@@ -82,3 +82,10 @@ fft_512: 162776 ns = 0.142 Gflop/s
 fft_1024: 253733 ns = 0.202 Gflop/s
 fft_2048: 574722 ns = 0.196 Gflop/s
 
+---------------------------
+
+After some emails, we decided that there were a number of things that
+made Franz' experiments not be apples-to-apples comparisons, so we
+put the ball back in his court to clean these up.
+
+
