Updated my characterization of the FFT performance curves based on Mary Beth's observation that I was mapping the legend to the lines incorrectly.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12608 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/users/franzf/v2/README
+++ b/test/users/franzf/v2/README
@@ -2,10 +2,10 @@
 Here's the newest version of the code from Franz.  He states that
 he's removed all of the apples-to-oranges comparison factors, and
 is seeing a large performance difference between Chapel and C99
-for gcc.  However, when I run, I'm seeing closer numbers for Intel
-(with Chapel generally winning) and a bigger gap for gcc (with
-Chapel still winning, particularly as problem sizes grow).  The
-*.pdf files in this directory show our respective performance
+for gcc.  However, when I run, I'm seeing gcc beating icc for
+Chapel-generated code, icc beating gcc for SPIRAL-generated code,
+and Chapel + gcc turning in the highest performance overall.
+The *.pdf files in this directory show our respective performance
 results.  Up is better in both graphs.
 
 From Franz' mail:
