Renamed writeXE0 to reset, made writeEF and readFE "public", and updated the spec to match. Fixed the problems that prevented two tests checked in today from working, though one of them (parallel/sync/deitz/test_generic_sync) still doesn't work right, most likely due to a problem with the test itself.  Deleted the futures corresponding to these tests. Did a bit of cleanup, including returning the same type of value on both parts of conditional expressions in the target-specific macros.  (Before, one part of the expression returned the value of the sync or single variable, while the other simply called a function returning void.  The C Standard does not permit this.)  Also, included line number and file name info in appropriate error messages.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12610 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Parallelism_and_Synchronization.tex
+++ b/spec/Parallelism_and_Synchronization.tex
@@ -442,21 +442,25 @@ sync-type:
 \subsubsection{Additional Synchronization Variable Functions}
 \label{Functions_on_Synchronization_Variables}
 \index{synchronization variables!built-in functions on}
-\index{writeFF@\chpl{writeFF}}
-\index{writeXF@\chpl{writeXF}}
-\index{writeXE@\chpl{writeXE}}
+\index{readFE@\chpl{readFE}}
 \index{readFF@\chpl{readFF}}
 \index{readXX@\chpl{readXX}}
+\index{writeEF@\chpl{writeEF}}
+\index{writeFF@\chpl{writeFF}}
+\index{writeXF@\chpl{writeXF}}
+\index{reset@\chpl{reset}}
 
 Synchronization variables support additional methods that
 can be used to bypass their semantics to provide new ones. For
 sync variable \chpl{s}, the following functions are defined:
 \begin{chapel}
-writeFF(s, v) // wait for full, assign s=v, and leave full
-writeXF(s, v) // no wait, assign s=v, and leave full
-writeXE(s, v) // no wait, assign s=v, and leave empty
+readFE(s)     // wait for full, leave empty, and return s's value
 readFF(s)     // wait for full, leave full, and return s's value
 readXX(s)     // no wait, leave F/E unchanged, and return s's value
+writeEF(s, v) // wait for empty, assign s=v, and leave full
+writeFF(s, v) // wait for full, assign s=v, and leave full
+writeXF(s, v) // no wait, assign s=v, and leave full
+reset(s)      // no wait, assign s's default value, and leave empty
 \end{chapel}
 
 For single variables \chpl{s} only \chpl{readFF} is defined.
