--- a/CHANGES
+++ b/CHANGES
@@ -7,8 +7,8 @@ STOPPED AT 12/12/07 21:59:41 -- figueroa
 ===========
 version 0.6
 ===========
-Third preliminary release of Chapel Compiler, December 2007
 
+Third preliminary release of Chapel Compiler, December 2007
 
 High-Level Themes:
 ------------------
@@ -16,42 +16,33 @@ High-Level Themes:
 - support for additional serial features
 - improved single-threaded performance, memory utilization
 - improved multi-threaded correctness, features
+- many, many bug fixes
 - target audience: HPCS mission partners, select HPC users and centers
 
 Changes to Chapel Language:
 ---------------------------
-- added support for a main() function per module, resolvable via --main-module
-- added support for $ in identifier names; by convention used to identify syncs
-- added support for arithmetic on ranges: +, -, *, /
-- added support for floating point literals with an exponent and integral base
-  e.g., 1e4 rather than 1.0e4
-- redefined range and domain slicing to result in intersection semantics
-- function resolution now favors a promoted argument over a generic one
-  e.g., foo(A) will favor "def foo(x: int)" over "def foo(x)" for A: [] int;
-- removed support for operations between scalars and tuples
-  e.g., (1, 2) + 3 is no longer supported; (1, 2) + (3, 4) still is
+- added support for defining type functions
+  e.g., def myint(param x: bool) { return if x then int(32) else int(64); }
+- changed supported functions on sync and single variables
 - added support for for- and forall-expressions using keyword syntax
   e.g., var A: [D] int = for i in D do foo(i);
+- added support for a main() function per module, resolvable via --main-module
 - added support for readln() function which skips to EOL after reading its args
 - added support for translate, interior, exterior, and expand methods on ranges
-- added support for bitwise operators on int/uint pairs of same size
 - added support for membership test on ranges
-- added ability for user to overload operators for uint(64)/int combinations
-- added support for defining type functions
-- changed supported functionality on sync and single variables
-- converted sync/single variable functions into methods
-
-Changes to Chapel Build Environment:
-------------------------------------
-- added support for cross-compilation environments -- see doc/README.chplenv
-- lots of restructuring of Makefiles
-- added mechanisms for selecting between threading/communication libraries
+- added support for range/scalar arithmetic using +, -, *, /
+  e.g., (1..10) + 1 == 2..11; (1..10) * 2 == 2..20 by 2
+- removed support for operations between scalars and tuples
+  e.g., (1, 2) + 3 is no longer supported; (1, 2) + (3, 4) still is
+- added support for bitwise operators on int/uint pairs of same size
+  e.g., int(32) & uint(32) => uint(32)
 
 Newly Implemented Features:
 ---------------------------
 - initial support for prototyping and calling C functions within Chapel code
-- implicit enum-to-string coercions and explicit string-to-enum conversions
 - improved handling of unifying multiple returns from a single function
+- improved legality checks for string-to-value conversions
+- implicit enum-to-string coercions and explicit string-to-enum conversions
 - improved support for slicing using unbounded and degenerate ranges
 - relaxed requirements that slicer and slicee objects use the same integer type
 - initial support for "on" statements
@@ -59,7 +50,6 @@ Newly Implemented Features:
 - improved support for nested modules and symbol resolution for external modules
 - support for overriding this() method in subclasses
 - added support for | and & reductions over booleans
-- improved legality checks for string-to-value conversions
 - added support for rank change slicing of domains and arrays
 - added support for a .clear() method on associative domains
 - added range checking for casts from integers to enumerated types
@@ -77,16 +67,30 @@ Newly Implemented Features:
   e.g., def foo(x: sync) { ... }
 - added support for runtime checks against nil class references
 - support for casts between complex and imaginary, real, and integral types
+- added ability for user to overload operators for uint(64)/int combinations
 
 Semantic Changes:
 -----------------
+- function resolution now favors a promoted argument over a generic one
+  e.g., foo(A) will favor "def foo(x: int)" over "def foo(x)" for A: [] int;
+- redefined range and domain slicing to use intersection semantics
 - defined semantics of default functions as being "return a const"
 - user-defined constructors now prevent a default constructor from being created
 
 Syntactic/Naming Changes:
 -------------------------
+- converted operations on sync/single variables from functions to methods
 - added ability to tag a function as returning a const value for documentation
 - changed name of array of locales from Locale to Locales (as named in spec)
+- added support for $ in identifier names; by convention used to identify syncs
+- added support for floating point literals with an exponent and integral base
+  e.g., 1e4 rather than 1.0e4
+
+Chapel Build Environment Changes:
+---------------------------------
+- added support for cross-compilation environments -- see doc/README.chplenv
+- added mechanisms for selecting threading/communication libraries -- see "
+- lots of improvements to Makefile architecture
 
 Documentation:
 --------------
@@ -135,6 +139,7 @@ Bug Fixes/New Semantic Checks (for old semantics):
 - fixed bugs in certain sync variable read/write functions
 - improved robustness of tensor function promotion
 - improved checking that a function returns a value along all control paths
+- improved bounds checking for array slicing
 
 Error Message Improvements:
 ---------------------------
